Switch URLs to Colab instead of Drive
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/eni/ml-concepts-mise-en-oeuvre-5J/1/tp.tex
+++ b/eni/ml-concepts-mise-en-oeuvre-5J/1/tp.tex
@@ -12,7 +12,7 @@
   Une fois le notebook chargé : \\
   Fichier > Enregistrer une copie dans Drive \\
   \begin{center}
-    \href{https://drive.google.com/open?id=1T-L2OM0LnY83AtkpJJfkHqvUf51GU56d}{www.exploration-données.ipynb}
+    \href{https://colab.research.google.com/drive/1T-L2OM0LnY83AtkpJJfkHqvUf51GU56d}{www.exploration-données.ipynb}
   \end{center}
 \end{frame}
 
