--- a/eni/ml-concepts-mise-en-oeuvre-5J/3/tp.tex
+++ b/eni/ml-concepts-mise-en-oeuvre-5J/3/tp.tex
@@ -10,24 +10,24 @@
 \begin{frame}
   \frametitle{Support TP 3 : PCA/LDA}
   \begin{center}
-    \href{https://drive.google.com/open?id=1n_97rd-P5Vo96QG5gFmbqqG1gRcxsehT}{www.pca-iris.ipynb}\\
-    \href{https://drive.google.com/open?id=1ctaJCxSC-V94vJMJHsYsfoFag0sKQKiy}{www.pca-lda.ipynb}
+    \href{https://colab.research.google.com/drive/1n_97rd-P5Vo96QG5gFmbqqG1gRcxsehT}{www.pca-iris.ipynb}\\
+    \href{https://colab.research.google.com/drive/1ctaJCxSC-V94vJMJHsYsfoFag0sKQKiy}{www.pca-lda.ipynb}
   \end{center}
 \end{frame}
 
 \begin{frame}
   \frametitle{Support TP 3 : Clustering}
   \begin{center}
-    \href{https://drive.google.com/open?id=1-WLPr0rs_h2lf7kvUYJnGAEmwrt86rnE}{www.kmean.ipynb}\\
-    \href{https://drive.google.com/open?id=1ENdoGQdU5nHo6_2O6Ip9Qz3hAlsfW3c4}{www.dbscan.ipynb}
+    \href{https://colab.research.google.com/drive/1-WLPr0rs_h2lf7kvUYJnGAEmwrt86rnE}{www.kmean.ipynb}\\
+    \href{https://colab.research.google.com/drive/1ENdoGQdU5nHo6_2O6Ip9Qz3hAlsfW3c4}{www.dbscan.ipynb}
   \end{center}
 \end{frame}
 
 \begin{frame}
   \frametitle{Support TP 3 : Détection d'anomalie}
   \begin{center}
-    \href{https://drive.google.com/open?id=1-nbjcb5JCVDyDDK6DFsVpfBEKcD34X_C}{local-outlier-factor.ipynb}\\
-    \href{https://drive.google.com/open?id=1EsUmo2brFdXJ1I2WVEopt3fK2y1jTYE2}{isolation-forest.ipynb}
+    \href{https://colab.research.google.com/drive/1-nbjcb5JCVDyDDK6DFsVpfBEKcD34X_C}{local-outlier-factor.ipynb}\\
+    \href{https://colab.research.google.com/drive/1EsUmo2brFdXJ1I2WVEopt3fK2y1jTYE2}{isolation-forest.ipynb}
   \end{center}
 \end{frame}
 
