--- a/mlweek/intra-2020/verteego-2020-02/avance/dpl-tp2.tex
+++ b/mlweek/intra-2020/verteego-2020-02/avance/dpl-tp2.tex
@@ -9,7 +9,7 @@
 \begin{frame}
   \frametitle{Travaux Pratiques}
   \begin{center}
-    \blue{\underline{\href{https://drive.google.com/open?id=1xLFNAWBJxmp0GBcRhmwKfZUbewBDq4hz}{Keras-CNN-landscape}}}
+    \blue{\underline{\href{https://colab.research.google.com/drive/1xLFNAWBJxmp0GBcRhmwKfZUbewBDq4hz}{Keras-CNN-landscape}}}
   \end{center}
 \end{frame}
 
