--- a/mlweek/intra-2020/verteego-2020-02/avance/dpl-tp3.tex
+++ b/mlweek/intra-2020/verteego-2020-02/avance/dpl-tp3.tex
@@ -9,7 +9,7 @@
 \begin{frame}
   \frametitle{Travaux Pratiques}
   \begin{center}
-    \blue{\underline{\href{https://drive.google.com/open?id=1v27jFJB-auN45fiYcRDeEw8ZO2FawE13}{Keras - seq2seq - Calculator}}}
+    \blue{\underline{\href{https://colab.research.google.com/drive/1v27jFJB-auN45fiYcRDeEw8ZO2FawE13}{Keras - seq2seq - Calculator}}}
   \end{center}
 \end{frame}
 
