--- a/mlweek/intra-2020/verteego-2020-02/avance/nn-keras-tp.tex
+++ b/mlweek/intra-2020/verteego-2020-02/avance/nn-keras-tp.tex
@@ -9,7 +9,7 @@
 \begin{frame}
   \frametitle{Travaux Pratiques}
   \begin{center}
-    \blue{\underline{\href{https://drive.google.com/open?id=1Eslst_uJnqijNVNSR654RzEHet7Lcrr_}{Keras Tutorial}}}
+    \blue{\underline{\href{https://colab.research.google.com/drive/1Eslst_uJnqijNVNSR654RzEHet7Lcrr_}{Keras Tutorial}}}
   \end{center}
 \end{frame}
 
