--- a/mlweek/intra-2020/verteego-2020-02/initiation/notebook-intro.tex
+++ b/mlweek/intra-2020/verteego-2020-02/initiation/notebook-intro.tex
@@ -16,7 +16,7 @@
 \begin{frame}
   \frametitle{Notebook Jupyter}
   Une démonstration vaut mieux qu'un long discours : \\
-  \blue{\underline{\href{https://drive.google.com/open?id=1mL15RbN_Wo_sJPSuVTEqM5rcJe1A6ddz}{Jupyter Notebook Demo}}}
+  \blue{\underline{\href{https://colab.research.google.com/drive/1mL15RbN_Wo_sJPSuVTEqM5rcJe1A6ddz}{Jupyter Notebook Demo}}}
 \end{frame}
 
 \end{document}
