--- a/mlweek/slides/8/1-tp.tex
+++ b/mlweek/slides/8/1-tp.tex
@@ -10,7 +10,7 @@
   \frametitle{Travaux Pratiques}
   N'oubliez pas d'en créer une copie sur votre google drive avant de commencer le TP
   \begin{center}
-    \blue{\href{https://drive.google.com/open?id=1wS56Bvj0KNGqMHIviwd2Y9uwYnUYkT5b}{Colab-CNN-landscape}}
+    \blue{\href{https://colab.research.google.com/drive/1wS56Bvj0KNGqMHIviwd2Y9uwYnUYkT5b}{Colab-CNN-landscape}}
   \end{center}
 \end{frame}
 
@@ -18,7 +18,7 @@
   \frametitle{Travaux Pratiques}
   N'oubliez pas d'en créer une copie sur votre google drive avant de commencer le TP
   \begin{center}
-    \blue{\href{https://drive.google.com/open?id=1o-bJu3E70FwL9twPU3R4L9epTL9rE3dI}{Colab-CNN-emotions}}
+    \blue{\href{https://colab.research.google.com/drive/1o-bJu3E70FwL9twPU3R4L9epTL9rE3dI}{Colab-CNN-emotions}}
   \end{center}
 \end{frame}
 
