--- a/orsys/INTRA/Canal Plus nov dec 2019/slides/3/tp-arma.tex
+++ b/orsys/INTRA/Canal Plus nov dec 2019/slides/3/tp-arma.tex
@@ -9,7 +9,7 @@
 \begin{frame}
   \frametitle{Support TP : Séries Temporelles}
   \begin{center}
-    \blue{\underline{\href{https://drive.google.com/open?id=15oB572ntKxC5jla-wQ5vcC93i65lCFHf}{Séries Temporelles - TP}}}
+    \blue{\underline{\href{https://colab.research.google.com/drive/15oB572ntKxC5jla-wQ5vcC93i65lCFHf}{Séries Temporelles - TP}}}
   \end{center}
 \end{frame}
 
