--- a/orsys/INTRA/Canal Plus nov dec 2019/slides/3/tp-unsupervised.tex
+++ b/orsys/INTRA/Canal Plus nov dec 2019/slides/3/tp-unsupervised.tex
@@ -9,8 +9,8 @@
 \begin{frame}
   \frametitle{Support TP : PCA/LDA}
   \begin{center}
-    \blue{\underline{\href{https://drive.google.com/open?id=1n_97rd-P5Vo96QG5gFmbqqG1gRcxsehT}{PCA- iris dataset - Tutoriel}}}\\
-    \blue{\underline{\href{https://drive.google.com/open?id=1ctaJCxSC-V94vJMJHsYsfoFag0sKQKiy}{PCA-LDA - Tutoriel}}}
+    \blue{\underline{\href{https://colab.research.google.com/drive/1n_97rd-P5Vo96QG5gFmbqqG1gRcxsehT}{PCA- iris dataset - Tutoriel}}}\\
+    \blue{\underline{\href{https://colab.research.google.com/drive/1ctaJCxSC-V94vJMJHsYsfoFag0sKQKiy}{PCA-LDA - Tutoriel}}}
   \end{center}
 \end{frame}
 
