--- a/shared/latex/auto-encoders/tp.tex
+++ b/shared/latex/auto-encoders/tp.tex
@@ -1,13 +1,13 @@
 \begin{frame}
   \frametitle{Travaux Pratiques}
   \begin{center}
-    \bluelink{https://drive.google.com/open?id=1ALCyDov1v00Nk1qrIKDqWYNbHgG66L_M}{Keras - Autoencodeurs - Simple}
+    \bluelink{https://colab.research.google.com/drive/1ALCyDov1v00Nk1qrIKDqWYNbHgG66L_M}{Keras - Autoencodeurs - Simple}
   \end{center}
 \end{frame}
 
 \begin{frame}
   \frametitle{Travaux Pratiques}
   \begin{center}
-    \bluelink{https://drive.google.com/open?id=1wLL0PVm8_bCwFsVUMSfqdPaQ1eFSfrwj}{Keras - Autoencodeurs - Débruiteurs}
+    \bluelink{https://colab.research.google.com/drive/1wLL0PVm8_bCwFsVUMSfqdPaQ1eFSfrwj}{Keras - Autoencodeurs - Débruiteurs}
   \end{center}
 \end{frame}
