--- a/shared/latex/natural-language-processing/tp-text-reco-system.tex
+++ b/shared/latex/natural-language-processing/tp-text-reco-system.tex
@@ -1,6 +1,6 @@
 \begin{frame}
   \frametitle{Travaux Pratiques}
   \begin{center}
-    \bluelink{https://drive.google.com/open?id=19q2dtXfCy5R9HHjIi-pMUQQcqYvYKv81}{TP - Système de recommandation - Texte}
+    \bluelink{https://colab.research.google.com/drive/19q2dtXfCy5R9HHjIi-pMUQQcqYvYKv81}{TP - Système de recommandation - Texte}
   \end{center}
 \end{frame}
