--- a/shared/latex/natural-language-processing/tp-text-regex.tex
+++ b/shared/latex/natural-language-processing/tp-text-regex.tex
@@ -1,6 +1,6 @@
 \begin{frame}
   \frametitle{Travaux Pratiques}
   \begin{center}
-    \bluelink{https://drive.google.com/open?id=1F6YIOLStESGcIu_fat_xePp1TXDN0Wv1}{TP - Expression Régulières}
+    \bluelink{https://colab.research.google.com/drive/1F6YIOLStESGcIu_fat_xePp1TXDN0Wv1}{TP - Expression Régulières}
   \end{center}
 \end{frame}
