--- a/shared/latex/neural-networks/tp-cnn.tex
+++ b/shared/latex/neural-networks/tp-cnn.tex
@@ -1,13 +1,13 @@
 \begin{frame}
   \frametitle{Données Landscape : instructions}
   \begin{center}
-    \bluelink{https://drive.google.com/open?id=1xLFNAWBJxmp0GBcRhmwKfZUbewBDq4hz}{Keras-CNN-landscape}
+    \bluelink{https://colab.research.google.com/drive/1xLFNAWBJxmp0GBcRhmwKfZUbewBDq4hz}{Keras-CNN-landscape}
   \end{center}
 \end{frame}
 
 \begin{frame}
   \frametitle{Données émotions : instructions}
   \begin{center}
-    \bluelink{https://drive.google.com/open?id=1AarpBtVUUi2DpOd20kF3LHg-bKLM7h_4}{Keras-CNN-emotions}
+    \bluelink{https://colab.research.google.com/drive/1AarpBtVUUi2DpOd20kF3LHg-bKLM7h_4}{Keras-CNN-emotions}
   \end{center}
 \end{frame}
