--- a/shared/latex/neural-networks/tp-nn-tf.tex
+++ b/shared/latex/neural-networks/tp-nn-tf.tex
@@ -1,4 +1,4 @@
 \begin{frame}
   \frametitle{Travaux Pratiques : Tensorflow }
-  \bluelink{https://drive.google.com/open?id=1qAvohjjhQpb7xLNmVxLwI1UBhC5KfSyQ}{Réseaux de neurones avec une API Tensorflow de Base}
+  \bluelink{https://colab.research.google.com/drive/1qAvohjjhQpb7xLNmVxLwI1UBhC5KfSyQ}{Réseaux de neurones avec une API Tensorflow de Base}
 \end{frame}
