--- a/shared/latex/neural-networks/tp-nn.tex
+++ b/shared/latex/neural-networks/tp-nn.tex
@@ -1,6 +1,6 @@
 \begin{frame}
   \frametitle{Instructions}
   \begin{center}
-    \bluelink{https://drive.google.com/open?id=1Eslst_uJnqijNVNSR654RzEHet7Lcrr_}{Keras TP}
+    \bluelink{https://colab.research.google.com/drive/1Eslst_uJnqijNVNSR654RzEHet7Lcrr_}{Keras TP}
   \end{center}
 \end{frame}
