--- a/shared/latex/neural-networks/tp-rnn-text.tex
+++ b/shared/latex/neural-networks/tp-rnn-text.tex
@@ -1,6 +1,6 @@
 \begin{frame}
   \frametitle{~}
   \begin{center}
-    \bluelink{https://drive.google.com/open?id=1tTcEZ55g7dYbDkX2IWmJpvjBcKLbvBV9}{RNN - Classification de texte}
+    \bluelink{https://colab.research.google.com/drive/1tTcEZ55g7dYbDkX2IWmJpvjBcKLbvBV9}{RNN - Classification de texte}
   \end{center}
 \end{frame}
