--- a/shared/latex/supervised/demo-gradient-boosting.tex
+++ b/shared/latex/supervised/demo-gradient-boosting.tex
@@ -1,6 +1,6 @@
 \begin{frame}
   \frametitle{~}
   \begin{center}
-    \bluelink{https://drive.google.com/open?id=1NHqqZSB_cVndX7r_QS4vQQsV2I3x9vEW}{Gradient Boosting Tree - Démo}
+    \bluelink{https://colab.research.google.com/drive/1NHqqZSB_cVndX7r_QS4vQQsV2I3x9vEW}{Gradient Boosting Tree - Démo}
   \end{center}
 \end{frame}
