--- a/shared/latex/supervised/tp-bayes.tex
+++ b/shared/latex/supervised/tp-bayes.tex
@@ -2,6 +2,6 @@
 \begin{frame}
   \frametitle{TP Réseaux Bayésiens}
   \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1EFQCe5fzSDcjmCS2NdATYkY8ooiYU02a?usp=sharing}{Réseaux Bayésiens}
+    \bluelink{https://colab.research.google.com/drive/1EFQCe5fzSDcjmCS2NdATYkY8ooiYU02a}{Réseaux Bayésiens}
   \end{center}
 \end{frame}
