--- a/shared/latex/supervised/tp-random-forest.tex
+++ b/shared/latex/supervised/tp-random-forest.tex
@@ -1,6 +1,6 @@
 \begin{frame}
   \frametitle{Random Forest}
   \begin{center}
-    \bluelink{https://drive.google.com/open?id=1ooL-E238TCsFQURfnKGY9uqjyXqRqySl}{Random Forest - TP}
+    \bluelink{https://colab.research.google.com/drive/1ooL-E238TCsFQURfnKGY9uqjyXqRqySl}{Random Forest - TP}
   \end{center}
 \end{frame}
