--- a/shared/latex/supervised/tp-reg-lin-poly.tex
+++ b/shared/latex/supervised/tp-reg-lin-poly.tex
@@ -3,13 +3,13 @@
 \begin{frame}
   \frametitle{Régression Linéaire}
   \begin{center}
-    \bluelink{https://drive.google.com/open?id=1CAkh09NmO-smYF9h3C5AA_69CZ9d7sTq}{Regression Linéaire - TP}
+    \bluelink{https://colab.research.google.com/drive/1CAkh09NmO-smYF9h3C5AA_69CZ9d7sTq}{Regression Linéaire - TP}
   \end{center}
 \end{frame}
 
 \begin{frame}
   \frametitle{Régression Polynomiale}
   \begin{center}
-    \bluelink{https://drive.google.com/open?id=1kNg2Bc4qBWt1q_SGSmw-zvLNG5FiQJYz}{Régression Polynomiale - Tutoriel}
+    \bluelink{https://colab.research.google.com/drive/1kNg2Bc4qBWt1q_SGSmw-zvLNG5FiQJYz}{Régression Polynomiale - Tutoriel}
   \end{center}
 \end{frame}
