--- a/shared/latex/supervised/tp-svm-text.tex
+++ b/shared/latex/supervised/tp-svm-text.tex
@@ -1,6 +1,6 @@
 \begin{frame}
   \frametitle{SVM}
   \begin{center}
-    \bluelink{https://drive.google.com/open?id=1IhgvvknJ5TYiM4gihiYYCK3UF4sW5-F3}{SVM TP}
+    \bluelink{https://colab.research.google.com/drive/1IhgvvknJ5TYiM4gihiYYCK3UF4sW5-F3}{SVM TP}
   \end{center}
 \end{frame}
