--- a/shared/latex/supervised/tp-svm.tex
+++ b/shared/latex/supervised/tp-svm.tex
@@ -2,6 +2,6 @@
   \frametitle{SVM}
   \red{TODO}
   \begin{center}
-    \bluelink{https://drive.google.com/open?id=1qbf95qZj0rW0cSzfIXUDHGwe0KrTOe8f}{SVM TP}
+    \bluelink{https://colab.research.google.com/drive/1qbf95qZj0rW0cSzfIXUDHGwe0KrTOe8f}{SVM TP}
   \end{center}
 \end{frame}
