--- a/shared/latex/tp-help.tex
+++ b/shared/latex/tp-help.tex
@@ -1,6 +1,6 @@
 \begin{frame}{Fonctions utiles}
   \begin{center}
-    \bluelink{https://drive.google.com/open?id=18UC6cySq3loE7S2t9-Fu_ihMT2nDeJjk}{Fonctions Utiles (cliquez ici)}
+    \bluelink{https://colab.research.google.com/drive/18UC6cySq3loE7S2t9-Fu_ihMT2nDeJjk}{Fonctions Utiles (cliquez ici)}
   \end{center}
   Après avoir ouvert le lien dans Colaboratory :
   \begin{center}
