--- a/mlweek/intra-2020/verteego-2020-02/avance/dpl-tp4.tex
+++ b/mlweek/intra-2020/verteego-2020-02/avance/dpl-tp4.tex
@@ -9,14 +9,14 @@
 \begin{frame}
   \frametitle{Travaux Pratiques}
   \begin{center}
-    \blue{\underline{\href{https://drive.google.com/open?id=1ALCyDov1v00Nk1qrIKDqWYNbHgG66L_M}{Keras - Autoencodeurs - Simple}}}
+    \blue{\underline{\href{https://colab.research.google.com/drive/1ALCyDov1v00Nk1qrIKDqWYNbHgG66L_M}{Keras - Autoencodeurs - Simple}}}
   \end{center}
 \end{frame}
 
 \begin{frame}
   \frametitle{Travaux Pratiques}
   \begin{center}
-    \blue{\underline{\href{https://drive.google.com/open?id=1wLL0PVm8_bCwFsVUMSfqdPaQ1eFSfrwj}{Keras - Autoencodeurs - Débruiteurs}}}
+    \blue{\underline{\href{https://colab.research.google.com/drive/1wLL0PVm8_bCwFsVUMSfqdPaQ1eFSfrwj}{Keras - Autoencodeurs - Débruiteurs}}}
   \end{center}
 \end{frame}
 
