--- a/mlweek/intra-2020/verteego-2020-02/initiation/bda-tp1.tex
+++ b/mlweek/intra-2020/verteego-2020-02/initiation/bda-tp1.tex
@@ -8,7 +8,7 @@
 
 \begin{frame}
   \frametitle{Travaux Pratiques}
-  \blue{\underline{\href{https://drive.google.com/open?id=18UC6cySq3loE7S2t9-Fu_ihMT2nDeJjk}{Quelques fonctions utiles pour les Notebook dans Colaboratory}}} \\
+  \blue{\underline{\href{https://colab.research.google.com/drive/18UC6cySq3loE7S2t9-Fu_ihMT2nDeJjk}{Quelques fonctions utiles pour les Notebook dans Colaboratory}}} \\
   \newline
   Après avoir ouvert le lien dans Colaboratory :
   \begin{center}
@@ -19,7 +19,7 @@
 
 \begin{frame}
   \frametitle{Travaux Pratiques}
-  \blue{\underline{\href{https://drive.google.com/open?id=1b93dMeJ1wubsVYyNkiCzg_4eaRqFgl51}{Exploration de données}}} \\
+  \blue{\underline{\href{https://colab.research.google.com/drive/1b93dMeJ1wubsVYyNkiCzg_4eaRqFgl51}{Exploration de données}}} \\
   $\;$ \\
   $\;$ \\
   \blue{\underline{\href{https://perso.limsi.fr/pointal/_media/python:cours:mementopython3-english.pdf}{python-help}}} \\
