--- a/mlweek/intra-2020/verteego-2020-02/mlweek-qcm-initiation/tp-hmm.tex
+++ b/mlweek/intra-2020/verteego-2020-02/mlweek-qcm-initiation/tp-hmm.tex
@@ -9,7 +9,7 @@
 \begin{frame}
   \frametitle{HMM}
   \begin{center}
-    \blue{\underline{\href{https://drive.google.com/open?id=14ZAAUnx8btwaRn4ODRUTH7M7HgP80DSb}{HMM - TP}}}
+    \blue{\underline{\href{https://colab.research.google.com/drive/14ZAAUnx8btwaRn4ODRUTH7M7HgP80DSb}{HMM - TP}}}
   \end{center}
 \end{frame}
 
