--- a/mlweek/slides/9-recomender-system/1-tp-on-code.tex
+++ b/mlweek/slides/9-recomender-system/1-tp-on-code.tex
@@ -13,7 +13,7 @@
     Firefox ne peut pas loader de dataset...\\
     Loggez-vous a votre compte google avant de cliquer sur ce lien :\\
     $\;$\\
-    \blue{\underline{\href{https://drive.google.com/open?id=1PFODcpWhX47ALZo9che73LzG9oKqIw2O}{www.MLWeek7.tp}}}\\
+    \blue{\underline{\href{https://colab.research.google.com/drive/1PFODcpWhX47ALZo9che73LzG9oKqIw2O}{www.MLWeek7.tp}}}\\
     $\;$\\
     Sélectionnez ``ouvrir dans Colaboratory'' \\
     Sauvez-en une copie dans votre ``Google Drive'' (dans le menu ``fichier'').\\
