--- a/orsys/INTRA/Canal Plus nov dec 2019/slides/3/tp.tex
+++ b/orsys/INTRA/Canal Plus nov dec 2019/slides/3/tp.tex
@@ -9,24 +9,24 @@
 \begin{frame}
   \frametitle{Support TP : PCA/LDA}
   \begin{center}
-    \blue{\underline{\href{https://drive.google.com/open?id=1n_97rd-P5Vo96QG5gFmbqqG1gRcxsehT}{PCA- iris dataset - Tutoriel}}}\\
-    \blue{\underline{\href{https://drive.google.com/open?id=1ctaJCxSC-V94vJMJHsYsfoFag0sKQKiy}{PCA-LDA - Tutoriel}}}
+    \blue{\underline{\href{https://colab.research.google.com/drive/1n_97rd-P5Vo96QG5gFmbqqG1gRcxsehT}{PCA- iris dataset - Tutoriel}}}\\
+    \blue{\underline{\href{https://colab.research.google.com/drive/1ctaJCxSC-V94vJMJHsYsfoFag0sKQKiy}{PCA-LDA - Tutoriel}}}
   \end{center}
 \end{frame}
 
 \begin{frame}
   \frametitle{Support TP : Clustering}
   \begin{center}
-    \blue{\underline{\href{https://drive.google.com/open?id=1-WLPr0rs_h2lf7kvUYJnGAEmwrt86rnE}{kmean - Tutoriel}}}\\
-    \blue{\underline{\href{https://drive.google.com/open?id=1ENdoGQdU5nHo6_2O6Ip9Qz3hAlsfW3c4}{dbscan - Tutoriel}}}
+    \blue{\underline{\href{https://colab.research.google.com/drive/1-WLPr0rs_h2lf7kvUYJnGAEmwrt86rnE}{kmean - Tutoriel}}}\\
+    \blue{\underline{\href{https://colab.research.google.com/drive/1ENdoGQdU5nHo6_2O6Ip9Qz3hAlsfW3c4}{dbscan - Tutoriel}}}
   \end{center}
 \end{frame}
 
 \begin{frame}
   \frametitle{Support TP : Détection d'anomalie}
   \begin{center}
-    \blue{\underline{\href{https://drive.google.com/open?id=1-nbjcb5JCVDyDDK6DFsVpfBEKcD34X_C}{local-outlier-factor - Tutoriel}}}\\
-    \blue{\underline{\href{https://drive.google.com/open?id=1EsUmo2brFdXJ1I2WVEopt3fK2y1jTYE2}{isolation-forest - Tutoriel}}}
+    \blue{\underline{\href{https://colab.research.google.com/drive/1-nbjcb5JCVDyDDK6DFsVpfBEKcD34X_C}{local-outlier-factor - Tutoriel}}}\\
+    \blue{\underline{\href{https://colab.research.google.com/drive/1EsUmo2brFdXJ1I2WVEopt3fK2y1jTYE2}{isolation-forest - Tutoriel}}}
   \end{center}
 \end{frame}
 
