--- a/shared/latex/natural-language-processing/tp-text-features-engineering.tex
+++ b/shared/latex/natural-language-processing/tp-text-features-engineering.tex
@@ -1,20 +1,20 @@
 \begin{frame}
   \frametitle{Traitement de données textuelles}
   \begin{center}
-    \bluelink{https://drive.google.com/open?id=1a44THAYDDkNJXsPsUQTAi1XaZYnFJER5}{Analyse de texte - Spacy}
+    \bluelink{https://colab.research.google.com/drive/1a44THAYDDkNJXsPsUQTAi1XaZYnFJER5}{Analyse de texte - Spacy}
   \end{center}
 \end{frame}
 
 \begin{frame}
   \frametitle{Traitement de données textuelles}
   \begin{center}
-    \bluelink{https://drive.google.com/open?id=1o5UYCkc7CQFN45kH1y3vEMba7ojFQ6cA}{Utilisation de TF-IDF et LSA}
+    \bluelink{https://colab.research.google.com/drive/1o5UYCkc7CQFN45kH1y3vEMba7ojFQ6cA}{Utilisation de TF-IDF et LSA}
   \end{center}
 \end{frame}
 
 \begin{frame}
   \frametitle{Traitement de données textuelles}
   \begin{center}
-    \bluelink{https://drive.google.com/open?id=1oshKbI0PQVk2VgubEmY7p7N5OH3hdEN3}{Utilisation de WordEmbeddings}
+    \bluelink{https://colab.research.google.com/drive/1oshKbI0PQVk2VgubEmY7p7N5OH3hdEN3}{Utilisation de WordEmbeddings}
   \end{center}
 \end{frame}
