--- a/shared/latex/neural-networks/tp-rnn.tex
+++ b/shared/latex/neural-networks/tp-rnn.tex
@@ -1,13 +1,13 @@
 \begin{frame}
   \frametitle{Travaux Pratiques}
   \begin{center}
-    \bluelink{https://drive.google.com/open?id=1fL6j4ylF6Mbs7o9d0nLO8Y4LxA11uoBD}{Keras - RNN - Voltaire Generator}
+    \bluelink{https://colab.research.google.com/drive/1fL6j4ylF6Mbs7o9d0nLO8Y4LxA11uoBD}{Keras - RNN - Voltaire Generator}
   \end{center}
 \end{frame}
 
 \begin{frame}
   \frametitle{Travaux Pratiques}
   \begin{center}
-    \bluelink{https://drive.google.com/open?id=1v27jFJB-auN45fiYcRDeEw8ZO2FawE13}{Keras - seq2seq - Calculator}
+    \bluelink{https://colab.research.google.com/drive/1v27jFJB-auN45fiYcRDeEw8ZO2FawE13}{Keras - seq2seq - Calculator}
   \end{center}
 \end{frame}
