--- a/shared/latex/supervised/demo-random-forest.tex
+++ b/shared/latex/supervised/demo-random-forest.tex
@@ -1,6 +1,6 @@
 \begin{frame}
   \frametitle{Random Forest}
   \begin{center}
-    \bluelink{https://drive.google.com/open?id=1zVDe4ZdTZngGHFtI1c7Ky52WTJDWLTv2}{Random Forest - Tutoriel}
+    \bluelink{https://colab.research.google.com/drive/1zVDe4ZdTZngGHFtI1c7Ky52WTJDWLTv2}{Random Forest - Tutoriel}
   \end{center}
 \end{frame}
