--- a/shared/latex/supervised/demo-svm.tex
+++ b/shared/latex/supervised/demo-svm.tex
@@ -1,6 +1,6 @@
 \begin{frame}
   \frametitle{SVM}
   \begin{center}
-    \bluelink{https://drive.google.com/open?id=1qbf95qZj0rW0cSzfIXUDHGwe0KrTOe8f}{SVM Tutoriel}
+    \bluelink{https://colab.research.google.com/drive/1qbf95qZj0rW0cSzfIXUDHGwe0KrTOe8f}{SVM Tutoriel}
   \end{center}
 \end{frame}
