--- a/shared/latex/tools/demo-spark-tf-keras-cnn.tex
+++ b/shared/latex/tools/demo-spark-tf-keras-cnn.tex
@@ -1,6 +1,6 @@
 \begin{frame}
   \frametitle{Démonstration}
   \begin{center}
-    \bluelink{https://drive.google.com/open?id=1lsuwihVVv4v6VBUfAft0D0pZOfnblpyi}{Démo Spark MLlib Titanic}
+    \bluelink{https://colab.research.google.com/drive/1lsuwihVVv4v6VBUfAft0D0pZOfnblpyi}{Démo Spark MLlib Titanic}
   \end{center}
 \end{frame}
