--- a/shared/latex/unsupervised/demo-anomaly-detect.tex
+++ b/shared/latex/unsupervised/demo-anomaly-detect.tex
@@ -2,7 +2,7 @@
 \begin{frame}
   \frametitle{Support TP : Détection d'anomalie}
   \begin{itemize}
-    \item \bluelink{https://drive.google.com/open?id=1-nbjcb5JCVDyDDK6DFsVpfBEKcD34X_C}{Local Outlier Factor --- Tutoriel}
-    \item \bluelink{https://drive.google.com/open?id=1EsUmo2brFdXJ1I2WVEopt3fK2y1jTYE2}{Isolation Forest --- Tutoriel}
+    \item \bluelink{https://colab.research.google.com/drive/1-nbjcb5JCVDyDDK6DFsVpfBEKcD34X_C}{Local Outlier Factor --- Tutoriel}
+    \item \bluelink{https://colab.research.google.com/drive/1EsUmo2brFdXJ1I2WVEopt3fK2y1jTYE2}{Isolation Forest --- Tutoriel}
   \end{itemize}
 \end{frame}
