--- a/shared/latex/unsupervised/demo-clustering.tex
+++ b/shared/latex/unsupervised/demo-clustering.tex
@@ -2,7 +2,7 @@
 \begin{frame}
   \frametitle{Support TP : Clustering}
   \begin{itemize}
-    \item \bluelink{https://drive.google.com/open?id=1-WLPr0rs_h2lf7kvUYJnGAEmwrt86rnE}{K-means - Tutoriel}
-    \item \bluelink{https://drive.google.com/open?id=1ENdoGQdU5nHo6_2O6Ip9Qz3hAlsfW3c4}{DBSCAN - Tutoriel}
+    \item \bluelink{https://colab.research.google.com/drive/1-WLPr0rs_h2lf7kvUYJnGAEmwrt86rnE}{K-means - Tutoriel}
+    \item \bluelink{https://colab.research.google.com/drive/1ENdoGQdU5nHo6_2O6Ip9Qz3hAlsfW3c4}{DBSCAN - Tutoriel}
   \end{itemize}
 \end{frame}
