--- a/shared/latex/unsupervised/demo-dim-reduce.tex
+++ b/shared/latex/unsupervised/demo-dim-reduce.tex
@@ -1,7 +1,7 @@
 
 \begin{frame}{Support TP : PCA/LDA}
   \begin{itemize}
-    \item \bluelink{https://drive.google.com/open?id=1n_97rd-P5Vo96QG5gFmbqqG1gRcxsehT}{PCA- iris dataset - Tutoriel}
-    \item \bluelink{https://drive.google.com/open?id=1ctaJCxSC-V94vJMJHsYsfoFag0sKQKiy}{PCA-LDA - Tutoriel}
+    \item \bluelink{https://colab.research.google.com/drive/1n_97rd-P5Vo96QG5gFmbqqG1gRcxsehT}{PCA- iris dataset - Tutoriel}
+    \item \bluelink{https://colab.research.google.com/drive/1ctaJCxSC-V94vJMJHsYsfoFag0sKQKiy}{PCA-LDA - Tutoriel}
   \end{itemize}
 \end{frame}
