Complete Sparks Python skeleton
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/sparks/langage-python/Langage Python.ipynb
+++ b/sparks/langage-python/Langage Python.ipynb
@@ -46,49 +46,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Une première chaîne\n",
+      "A first string\n",
       "\n",
-      "Une deuxième chaîne\n",
+      "A second string\n",
       "\n",
-      "Une troisième chaîne\n",
-      "Sur plusieurs lignes\n",
+      "A third string\n",
+      "Spanning several lines\n",
       "\n",
-      "Une chaîne avec des caractères spéciaux.\n",
-      "Qui ont leur sens spécial\n",
+      "A string with special characters,\n",
+      "That have their special meaning.\n",
       "\n",
-      "Une chaîne brute avec des caractères spéciaux\\nQui n'ont plus leur sens spécial\n"
+      "A string with special characters,\\nThat don't have their special meaning.\n"
      ]
     }
    ],
    "source": [
-    "print(\"Une première chaîne\")\n",
+    "print(\"A first string\")\n",
     "print()\n",
     "\n",
-    "print('Une deuxième chaîne')\n",
+    "print('A second string')\n",
     "print()\n",
     "\n",
-    "print(\"\"\"Une troisième chaîne\n",
-    "Sur plusieurs lignes\"\"\")\n",
+    "print(\"\"\"A third string\n",
+    "Spanning several lines\"\"\")\n",
     "print()\n",
     "\n",
-    "print(\"Une chaîne avec des caractères spéciaux.\\nQui ont leur sens spécial\")\n",
+    "print(\"A string with special characters,\\nThat have their special meaning.\")\n",
     "print()\n",
     "\n",
-    "print(r\"Une chaîne brute avec des caractères spéciaux\\nQui n'ont plus leur sens spécial\")"
+    "print(r\"A string with special characters,\\nThat don't have their special meaning.\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fonctions sur les chaînes"
+    "### Fonctions sur les chaînes\n",
+    "\n",
+    "Elles sont nombreuses et permettent de réaliser un grand nombre d'opération directement ([documentation officielle](https://docs.python.org/fr/3/library/string.html#format-string-syntax)).\n",
+    "\n",
+    "Parmi les plus importantes, on retrouve:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original: A string\n",
+      "lower: a string\n",
+      "upper: A STRING\n",
+      "startswith: True\n",
+      "endswith: True\n",
+      "split: ['A', 'string']\n",
+      "join: A string, joined to another one.\n",
+      "len: 8\n",
+      "[] access: st\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = \"A string\"\n",
+    "print(\"original:\", string)\n",
+    "print(\"lower:\", string.lower())\n",
+    "print(\"upper:\", string.upper())\n",
+    "print(\"startswith:\", string.startswith(\"A\"))\n",
+    "print(\"endswith:\", string.endswith(\"ng\"))\n",
+    "print(\"split:\", string.split(\" \"))\n",
+    "print(\"join:\", \", \".join([string, \"joined to another one.\"]))\n",
+    "print(\"len:\", len(string))\n",
+    "print(\"[] access:\", string[2:4])"
    ]
   },
   {
@@ -102,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +164,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Un bon site de référence pour toutes les options de format est https://pyformat.info/."
+    "Un bon site de référence pour toutes les options de format est [PyFormat](https://pyformat.info/), en plus de la [documentation officielle](https://docs.python.org/fr/3/library/string.html#format-string-syntax)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercice\n",
+    "\n",
+    "Trouvez la fonction qui permet de capitaliser la première lettre d'une chaîne de caractères et appliquez la à la chaîne `company_name`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# company_name = \"canonical\"\n",
+    "# capitalized_company_name = ???\n",
+    "# print(capitalized_company_name)"
    ]
   },
   {
@@ -135,17 +193,164 @@
    "source": [
     "## Les tableaux indicés (tuples et listes)\n",
     "\n",
-    "Un outil incontournable dans n'importe quel langage de programmation. Les listes Python sont de véritables couteaux suisses."
+    "### Listes\n",
+    "\n",
+    "Un outil incontournable dans n'importe quel langage de programmation. Les listes Python sont de véritables couteaux suisses. On les définit entre `[` et `]`, en séparant les éléments par des `,`.\n",
+    "\n",
+    "À noter : les listes Python peuvent contenir des valeurs de type différent. **Il faut absolument éviter d'utiliser cette possibilité du langage**. Il faut préférer les tuples, que nous voyons dans la section d'après dans ces cas. En effet, des types différents dans une liste rendent tout traitement périlleux et induisent de nombreux bugs sur la durée. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "homogene = [1, 2, 3]  # conseillé\n",
-    "hétérogène = []"
+    "empty_list = []\n",
+    "empty_list = list()\n",
+    "homogeneous = [1, 2, 3]  # OK\n",
+    "heterogeneous = [\"a\", 1, 3.4]  # Valid Python but not OK"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Opérations sur les listes\n",
+    "\n",
+    "La [tutoriel officiel](https://docs.python.org/fr/3/tutorial/datastructures.html) donne les principales opérations.\n",
+    "\n",
+    "Parmi elles, on retrouvera surtout :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "append: None\n",
+      "extend: None\n",
+      "len: 4\n",
+      "in: True\n",
+      "sorted: [1, 2, 3, 4]\n",
+      "[] access: 2\n",
+      "[from:to] access: [1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [3, 1, 2, 4]\n",
+    "\n",
+    "print(\"append:\", [1].append(2))\n",
+    "print(\"extend:\", [1].extend([2, 3]))\n",
+    "print(\"len:\", len(data))\n",
+    "print(\"in:\", 1 in data)\n",
+    "print(\"sorted:\", sorted(data))\n",
+    "print(\"[] access:\", data[2])\n",
+    "print(\"[from:to] access:\", data[1:3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Compréhension de listes\n",
+    "\n",
+    "Il y a une manière très idiomatique de définir des listes en Python : les compréhensions de listes. La syntaxe est la suivante `[result for item in starting_list if condition]` :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([i ** 2 for i in [1, 2, 3] if i > 1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nous utilisons régulièrement cette syntaxe dans cette formation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exercice\n",
+    "\n",
+    "Triez une liste pour en récupérer le minimum en accédant à son premier élément (vous pourrez plus tard utiliser la fonction built-in `min` qui permet de faire cela plus efficacement, ou itérer vous-même sur la liste quand nous aurons vu comment le faire) :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# long_list = [1, 0, 8, 7, 1, 2, 3, 109, 72, 719, 2, 3, 719, 3, 2, 891, 1, 3, 15]\n",
+    "# sorted_list = ???\n",
+    "# first_element = ???\n",
+    "# print(first_element)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tuples\n",
+    "\n",
+    "Les tuples sont des objets immuables (on ne peut pas changer, ajouter ou enlever d'élément). Leur utilisation la plus courante est de « grouper » ensemble des éléments connus à l'avance sans pour autant créer de classe à part entière. La syntaxe pour les créer est la même que pour les listes, mais ils utilisent des `(` et `)` au lieu des `[` et `]`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "empty_tuple = tuple()\n",
+    "one_element_tuple = (1,)\n",
+    "regular_tuple = (\"python\", 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Un point très intéressant est que l'on peut déstructurer les tuples dans plusieurs variables :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "language, version = (\"python\", 3)\n",
+    "print(language, version)"
    ]
   },
   {
@@ -205,7 +410,121 @@
     "id": "8Ywqu85h3fVZ"
    },
    "source": [
-    "## if, for, while, émuler un switch_case"
+    "## `if`, `for`, `while`, émuler un `switch`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "HCzZ6jvLgjs9"
+   },
+   "source": [
+    "### `if`: conditionnelle simple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "id": "KgDqL262ccJR"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Branche else\n"
+     ]
+    }
+   ],
+   "source": [
+    "cond1 = len(\"abc\") > 3\n",
+    "cond2 = len(\"abc\") < 3\n",
+    "\n",
+    "if cond1:\n",
+    "    print(\"Branche if\")\n",
+    "elif cond2:\n",
+    "    print(\"Branche elif\")\n",
+    "else:\n",
+    "    print(\"Branche else\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "vgVScj0yhBSd"
+   },
+   "source": [
+    "### `for` : boucle « pour … dans … »"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "id": "Q1sBASwodMQ_"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0\n",
+      "1 1\n",
+      "2 4\n",
+      "3 9\n",
+      "4 16\n",
+      "5 25\n",
+      "6 36\n",
+      "7 49\n",
+      "8 64\n",
+      "9 81\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    print(i, i ** 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "QVBVQeBhg5Mu"
+   },
+   "source": [
+    "### `while` : boucle « tant que »"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "id": "pOmtr9aGdBCk"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0\n",
+      "1 1\n",
+      "2 4\n",
+      "3 9\n",
+      "4 16\n",
+      "5 25\n",
+      "6 36\n",
+      "7 49\n",
+      "8 64\n",
+      "9 81\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "while i < 10:\n",
+    "    print(i, i ** 2)\n",
+    "    i += 1"
    ]
   },
   {
@@ -220,6 +539,79 @@
    "metadata": {},
    "source": [
     "## Visibilité des variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "vf9iMmVthfM8"
+   },
+   "source": [
+    "La visibilité des variables est particulière en Python : une variable n'est pas visible seulement dans son bloc mais dans toute la fonction où elle est définie."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "id": "DDNhyCaPhfjH"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "Hello World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "boolean = True\n",
+    "\n",
+    "if True:\n",
+    "    boolean = False\n",
+    "\n",
+    "def fonction():\n",
+    "    boolean = True\n",
+    "\n",
+    "fonction()\n",
+    "\n",
+    "print(boolean)\n",
+    "\n",
+    "if True:\n",
+    "    new_variable = \"Hello World!\"\n",
+    "\n",
+    "# Hors du bloc de définition, ne compilerait pas en Java par exemple\n",
+    "print(new_variable)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En particulier, cela veut dire que les variables intérieures des `for … in …:` ne sont pas vraiment « intérieures », elles sont accessibles après la boucle et effaceraient d'autres variables nommées comme elles :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 4\n",
+    "\n",
+    "for i in [1, 2, 3]:\n",
+    "    pass\n",
+    "print(i)"
    ]
   },
   {
@@ -403,49 +795,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## gestion de fichiers"
+    "## Gestion de fichiers"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## argparse"
+    "## `argparse`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## logging"
+    "## `logging`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## configparser"
+    "## `configparser`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## os"
+    "## `os`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## subprocess"
+    "## `subprocess`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## re (expressions rationnelles)"
+    "## `re` (expressions régulières)"
    ]
   },
   {
@@ -459,35 +851,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## décorateurs"
+    "## Décorateurs"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## itérateurs et générateurs"
+    "## Itérateurs et générateurs"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## context managers"
+    "## Context managers"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## unittest et docstests"
+    "## `unittest` et `docstests`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## documenter avec sphinx"
+    "## Documenter avec `sphinx`"
    ]
   },
   {
@@ -680,53 +1072,6 @@
     "flottant = 5.4\n",
     "string = \"chaîne de caractères\"\n",
     "booleen = True"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "vf9iMmVthfM8"
-   },
-   "source": [
-    "#### Scope\n",
-    "\n",
-    "Le scope des variables (là où elles sont visibles) est particulier en Python : une variable n'est pas visible seulement dans son bloc mais dans toute la fonction où elle est définie."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "id": "DDNhyCaPhfjH"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n",
-      "Hello World!\n"
-     ]
-    }
-   ],
-   "source": [
-    "booleen = True\n",
-    "\n",
-    "if True:\n",
-    "  booleen = False\n",
-    "\n",
-    "def fonction():\n",
-    "  booleen = True\n",
-    "\n",
-    "fonction()\n",
-    "\n",
-    "print(booleen)\n",
-    "\n",
-    "if True:\n",
-    "  nouvelle_variable = \"Hello World!\"\n",
-    "\n",
-    "# Hors du bloc de définition, ne compilerait pas en Java par exemple\n",
-    "print(nouvelle_variable)"
    ]
   },
   {
