Extend tools section, beef up IAO
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/intelligence-artificielle/intro.tex
+++ b/shared/latex/intelligence-artificielle/intro.tex
@@ -13,16 +13,7 @@
   \item Ensemble des fonctions mentales ayant pour objet la connaissance conceptuelle et rationnelle
   \item Aptitude d'un être humain à s'adapter à une situation, à choisir des moyens d'action en fonction des circonstances
   \end{itemize}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Préambule à l'intelligence artificielle}
-  \imgtwl[0.2]{larousse}
-  \underline{\textbf{Intelligence}} :
-  \begin{itemize}
-  \item Ensemble des fonctions mentales ayant pour objet la connaissance conceptuelle et rationnelle
-  \item Aptitude d'un être humain à s'adapter à une situation, à choisir des moyens d'action en fonction des circonstances
-  \end{itemize}
+  \pause
   \begin{center}
     \red{intelligence animale ? intelligence collective ?}
   \end{center}
@@ -35,16 +26,7 @@
   \newline
   \begin{center}
     Situation $\Rightarrow$ \green{\underline{choix action}} $\Leftarrow$ optimisation récompense
-  \end{center}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Préambule à l'intelligence artificielle}
-  \underline{\textbf{Intelligence}} :
-  \newline
-  \newline
-  \begin{center}
-    Situation $\Rightarrow$ \green{\underline{choix action}} $\Leftarrow$ optimisation récompense
+    \pause
     \newline
     \newline
     \red{Quelles caractéristiques indispensables ?}
