Some refactoring of engineering section
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/formation.cls
+++ b/formation.cls
@@ -17,6 +17,7 @@
 \RequirePackage[export]{adjustbox}
 \RequirePackage{amsmath}
 \RequirePackage{amssymb}
+\RequirePackage{tabularx}
 \RequirePackage{booktabs}
 \RequirePackage{etoolbox}
 \RequirePackage{hyperref}
