Use better symbol for subsection in frame title
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/formation.cls
+++ b/formation.cls
@@ -61,7 +61,7 @@
           {%
             \scriptsize%
             \insertsectionhead%
-            \ifdefempty{\insertsubsectionhead}{}{ > \insertsubsectionhead}%
+            \ifdefempty{\insertsubsectionhead}{}{ --- \insertsubsectionhead}%
             \newline%
           }%
         }%
